# School21-Minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out
includes/: get_next_line.h  minishell.h
srcs/: base.c  ft_atoi.c  ft_builtin.c  ft_cd.c  ft_doublelist.c  ft_export.c  ft_forline.c  ft_forline4.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstadd_mem.c  ft_memcmp.c  ft_memmove.c  ft_parse_utils.c  ft_parse_utils1.c  ft_pipes.c  ft_putstr_fd.c  ft_redirect.c  ft_split.c  ft_strtrim.c  ft_termcap.c  ft_termcap1.c  ft_termcap2.c  ft_unset.c  get_next_line.c  get_next_line_exam.c  get_next_line_utils.c  gnl_exam.c  lstadd_back.c  main.c  mini_utils.c  parse_main.c  parse_pwd.c  print_errors.c
testgetcwd/: a.out  main.c
unnecessary_files/: get_next_line.h  wwwwy.c
